--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 body {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-image : url('./sunset.jpg');
+    margin: 0;
+    padding: 0;
+    background: url('./images/sunset.jpg');
     background-size: cover;
     background-position: center;
-    margin: 0; 
-    padding: 0;
+    background-attachment: fixed;
+    color: #2d3436;
+    min-height: 1440px;
 }
 
 .container {
